[workspace]
members = ["gen", "macros"]
exclude = ["fuzz"]

[workspace.package]
version = "0.0.25"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/verdiwm/waynest"

[package]
name = "waynest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core wayland stuff"
readme = "README.md"
documentation = "https://docs.rs/waynest"
repository.workspace = true
include = ["src/**/*.rs", "README.md", "LICENSE"]

[features]
client = ["dep:async-trait", "dep:bitflags", "dep:downcast-rs"]
server = ["dep:async-trait", "dep:bitflags"]
tracing = ["dep:tracing"]

# Various protocols
stable = []
staging = []
unstable = []
wlr = []
plasma = []
weston = []
cosmic = ["wlr"]
frog = []
ivi = []
hyprland = []
mesa = []
treeland = []

# Internal features     
fuzz = ["dep:arbitrary"]

[dependencies]
bytes = "1.10.1"
pin-project-lite = "0.2.16"
rustix = { version = "1.0.7", features = ["fs", "net"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "net"] }
tokio-stream = { version = "0.1.17", default-features = false }
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
] }

waynest-macros = { version = "0.0.25", path = "macros" }

async-trait = { version = "0.1.88", optional = true }
bitflags = { version = "2.9.1", optional = true }

tracing = { version = "0.1.41", optional = true }
arbitrary = { version = "1.4.1", optional = true, features = ["derive"] }
downcast-rs = { version = "2.0.1", optional = true }

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [[example]]
# name = "client"
# required-features = ["client"]
