[workspace]
members = ["crates/*", "xtask"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.2.0-rc1"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/verdiwm/waynest"

[workspace.dependencies]
waynest = { version = "0.2.0-rc1", path = "./crates/core" }
waynest-client = { version = "0.2.0-rc1", path = "./crates/client" }
waynest-gen = { version = "0.2.0-rc1", path = "./crates/gen" }
waynest-macros = { version = "0.2.0-rc1", path = "./crates/macros" }
waynest-protocols = { version = "0.2.0-rc1", path = "./crates/protocols" }
waynest-server = { version = "0.2.0-rc1", path = "./crates/server" }
