[package]
name = "verdi-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
bytes = "1.8.0"
libfuzzer-sys = "0.4.9"

[dependencies.waynest]
path = ".."
features = ["fuzz"]

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false
bench = false
