[package]
name = "waynest-macros"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Macros for waynest"
readme = "../README.md"
documentation = "https://docs.rs/waynest"
repository = "https://github.com/verdiwm/waynest"
include = ["src/**/*.rs", "../README.md", "../LICENSE"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.70", features = ["full"] }
