[package]
name = "waynest-macros"
version = "0.0.3"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Macros for waynest"
readme = "../README.md"
documentation = "https://docs.rs/waynest"
repository = "https://github.com/verdiwm/waynest"
include = ["src/**/*.rs", "../README.md", "../LICENSE"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.89", features = ["full"] }
waynest-gen = { version = "0.0.1", path = "../gen", optional = true }

[features]
gen = ["dep:waynest-gen"]
