[package]
name = "waynest-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Macros for waynest"
readme = "../README.md"
documentation = "https://docs.rs/waynest-macros"
repository.workspace = true
include = ["src/**/*.rs", "../README.md", "../LICENSE"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.89", features = ["full"] }
waynest-gen = { version = "0.0.25", path = "../gen", optional = true }

[features]
gen = ["dep:waynest-gen"]
