[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/verdiwm/waynest"

[dependencies]
anyhow = "1.0.102"
quote = "1.0.45"
sap = "0.1.0"
walkdir = "2.5.0"
waynest-gen = { path = "../crates/gen" }
