[package]
name = "waynest-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Client library for waynest"
documentation = "https://docs.rs/waynest-client"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[dependencies]
waynest = { workspace = true }
waynest-macros = { workspace = true }
