[package]
name = "waynest-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core trait and types for waynest"
documentation = "https://docs.rs/waynest-core"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[dependencies]
