[package]
name = "waynest-macros"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version = "0.1.0"
description = "Macros for waynest"
documentation = "https://docs.rs/waynest-macros"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[features]
gen = ["dep:waynest-gen"]

[dependencies]
darling = "0.21.3"
quote = "1.0.37"
syn = { version = "2.0.89", features = ["full"] }
waynest-gen = { version = "0.1", path = "../gen", optional = true }

[lib]
proc-macro = true
