[package]
name = "waynest-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Macros for waynest"
documentation = "https://docs.rs/waynest-macros"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[features]
gen = ["dep:waynest-gen"]

[dependencies]
darling = "0.23.0"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
waynest-gen = { workspace = true, optional = true }

[lib]
proc-macro = true
