[package]
name = "waynest-protocols"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
bitflags = { version = "2.9.4", features = ["std"] }
futures-core = "0.3.31"
futures-sink = "0.3.31"
tracing = { version = "0.1.41", optional = true }
waynest = { version = "0.1", path = "../core" }

[features]
server = []
client = []

stable = []
staging = []
unstable = []
wlr = []
plasma = []
weston = []
cosmic = ["wlr"]
frog = []
ivi = []
hyprland = []
mesa = []
treeland = []

tracing = ["dep:tracing"]
