[package]
name = "waynest-protocols"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version = "0.1.0"
description = "Generated protocols for waynest"
documentation = "https://docs.rs/waynest-protocols"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[features]
server = ["dep:futures-util"]
client = []

stable = []
staging = []
unstable = []
wlr = []
plasma = []
weston = []
cosmic = ["wlr"]
frog = []
ivi = []
hyprland = []
mesa = []
treeland = []

tracing = ["dep:tracing"]

[dependencies]
bitflags = { version = "2.9.4", features = ["std"] }
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
], optional = true }
tracing = { version = "0.1.41", optional = true }
waynest = { version = "0.1", path = "../core" }
