[package]
name = "waynest-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Generated protocols for waynest"
documentation = "https://docs.rs/waynest-protocols"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[features]
server = ["dep:futures-util"]
client = ["dep:futures-util"]

stable = []
staging = []
unstable = []
wlr = []
plasma = []
weston = []
cosmic = ["wlr"]
frog = []
ivi = []
hyprland = []
mesa = []
treeland = []
mutter = []
river = []

tracing = ["dep:tracing"]

[dependencies]
bitflags = { version = "2.11.0", features = ["std"] }
futures-core = "0.3.32"
futures-sink = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = [
  "sink",
], optional = true }
tracing = { version = "0.1.44", optional = true }
waynest = { workspace = true }
