[package]
name = "waynest-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Server library for waynest"
documentation = "https://docs.rs/waynest-server"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[dependencies]
async-trait = "0.1.89"
futures-core = "0.3.32"
futures-sink = "0.3.32"
pin-project-lite = "0.2.17"
tokio = { version = "1.50.0", features = ["net"] }
tokio-stream = "0.1.18"
waynest = { workspace = true }
waynest-macros = { workspace = true }
